# xRust

./: .gitignore  Cargo.toml  rustfmt.toml
02-basic/stat-and-expr/src/: main.rs
04-conpound-type/array/src/: main.rs
04-conpound-type/string-and-slice/src/: main.rs
04-conpound-type/tuple/src/: main.rs
06-pattern-match/pattern/src/: main.rs
08-generics-and-trait/trait_object/src/: main.rs
09-collections/hash_map/src/: main.rs
10-lifetime-basic/lifetime/src/: main.rs
11-rv-and-eh/result_/: Cargo.toml
11-rv-and-eh/result_/src/: main.rs
13-annotation/doc-comments/: Cargo.toml
14-format-output/debug_trait/src/: main.rs
14-format-output/format_macros/: Cargo.toml
14-format-output/format_macros/src/: main.rs
courses/02-basic/stat-and-expr/: Cargo.toml
courses/03-ownership/ownership/src/: main.rs
courses/03-ownership/ref-and-borrow/src/: main.rs
courses/04-conpound-type/enumerate/src/: main.rs
courses/04-conpound-type/string-and-slice/: Cargo.toml
courses/04-conpound-type/structure/src/: main.rs
courses/05-workflow/workflow/src/: main.rs
courses/06-pattern-match/matching/src/: main.rs
courses/06-pattern-match/pattern/src/: main.rs
courses/08-generics-and-trait/generics/src/: main.rs
courses/09-collections/vec/src/: main.rs
courses/11-rv-and-eh/panic_/: Cargo.toml
courses/11-rv-and-eh/panic_/src/: main.rs
courses/12-multiple-files/greeter/src/: lib.rs  main.rs
courses/12-multiple-files/restaurant/src/: lib.rs
courses/13-annotation/doc-comments/src/: lib.rs
courses/14-format-output/display_trait/src/: main.rs
courses/14-format-output/format_args/src/: main.rs
courses/15-lifetime-advanced/lifetime_checker/: Cargo.toml
courses/15-lifetime-advanced/lifetime_checker/src/: main.rs
courses/15-lifetime-advanced/reborrow/: Cargo.toml
courses/15-lifetime-advanced/reborrow/src/: main.rs
courses/16-functional_programming/closure_/: Cargo.toml
courses/16-functional_programming/closure_/src/: main.rs
courses/16-functional_programming/fn_trait/: Cargo.toml
courses/16-functional_programming/iterator/src/: common_adapters.rs  consuming_adapters.rs  creating_iterators.rs  custom_iterator.rs  lazy_evaluation.rs  main.rs
projects/minigrep/src/: lib.rs  main.rs
