[workspace]
resolver = "3"
members = [
    "courses/01-intro/world_hello",
    "courses/02-basic/complex-num", "courses/02-basic/stat-and-expr",
    "courses/03-ownership/ownership", "courses/03-ownership/ref-and-borrow",
    "courses/04-conpound-type/array", "courses/04-conpound-type/enumerate",
    "courses/04-conpound-type/string-and-slice", "courses/04-conpound-type/structure", "courses/04-conpound-type/tuple",
    "courses/05-workflow/workflow",
    "courses/06-pattern-match/matching", "courses/06-pattern-match/pattern",
    "courses/07-method/method",
    "courses/08-generics-and-trait/generics", "courses/08-generics-and-trait/trait_", "courses/08-generics-and-trait/trait_object",
    "courses/09-collections/hash_map", "courses/09-collections/vec",
    "courses/10-lifetime-basic/lifetime",
    "courses/11-rv-and-eh/panic_", "courses/11-rv-and-eh/result_",
    "courses/12-multiple-files/greeter", "courses/12-multiple-files/restaurant",
    "courses/13-annotation/doc-comments",
    "courses/14-format-output/debug_trait", "courses/14-format-output/display_trait",
    "courses/14-format-output/format_args", "courses/14-format-output/format_macros", "courses/15-lifetime-advanced/lifetime_checker", "courses/15-lifetime-advanced/reborrow", "projects/minigrep",
]
